--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "concurrently": "^8.2.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "mongoose": "^7.4.3",
     "nodemon": "^3.0.1",
     "react-bootstrap": "^1.6.7"
   }
